tests/snapshots/transform__AttrKey__event_namespace.snap
---
source: tests/transform.rs
expression: element.transform()
---
Element {
    tag: Native(
        "div",
    ),
    attrs: [
        Attr {
            key: Event(
                "click",
            ),
            value: Lit(
                Str(
                    Str {
                        span: Span {
                            lo: BytePos(
                                15,
                            ),
                            hi: BytePos(
                                23,
                            ),
                            ctxt: #0,
                        },
                        value: Atom('()=>{}' type=inline),
                        raw: Some(
                            "\"()=>{}\"",
                        ),
                    },
                ),
            ),
        },
    ],
    children: [],
    raw: JSXElement {
        span: Span {
            lo: BytePos(
                1,
            ),
            hi: BytePos(
                30,
            ),
            ctxt: #0,
        },
        opening: JSXOpeningElement {
            name: Ident(
                Ident {
                    span: Span {
                        lo: BytePos(
                            2,
                        ),
                        hi: BytePos(
                            5,
                        ),
                        ctxt: #0,
                    },
                    sym: Atom('div' type=static),
                    optional: false,
                },
            ),
            span: Span {
                lo: BytePos(
                    1,
                ),
                hi: BytePos(
                    24,
                ),
                ctxt: #0,
            },
            attrs: [
                JSXAttr(
                    JSXAttr {
                        span: Span {
                            lo: BytePos(
                                6,
                            ),
                            hi: BytePos(
                                23,
                            ),
                            ctxt: #0,
                        },
                        name: JSXNamespacedName(
                            JSXNamespacedName {
                                ns: Ident {
                                    span: Span {
                                        lo: BytePos(
                                            6,
                                        ),
                                        hi: BytePos(
                                            8,
                                        ),
                                        ctxt: #0,
                                    },
                                    sym: Atom('on' type=inline),
                                    optional: false,
                                },
                                name: Ident {
                                    span: Span {
                                        lo: BytePos(
                                            9,
                                        ),
                                        hi: BytePos(
                                            14,
                                        ),
                                        ctxt: #0,
                                    },
                                    sym: Atom('click' type=inline),
                                    optional: false,
                                },
                            },
                        ),
                        value: Some(
                            Lit(
                                Str(
                                    Str {
                                        span: Span {
                                            lo: BytePos(
                                                15,
                                            ),
                                            hi: BytePos(
                                                23,
                                            ),
                                            ctxt: #0,
                                        },
                                        value: Atom('()=>{}' type=inline),
                                        raw: Some(
                                            "\"()=>{}\"",
                                        ),
                                    },
                                ),
                            ),
                        ),
                    },
                ),
            ],
            self_closing: false,
            type_args: None,
        },
        children: [],
        closing: Some(
            JSXClosingElement {
                span: Span {
                    lo: BytePos(
                        24,
                    ),
                    hi: BytePos(
                        30,
                    ),
                    ctxt: #0,
                },
                name: Ident(
                    Ident {
                        span: Span {
                            lo: BytePos(
                                26,
                            ),
                            hi: BytePos(
                                29,
                            ),
                            ctxt: #0,
                        },
                        sym: Atom('div' type=static),
                        optional: false,
                    },
                ),
            },
        ),
    },
    is_static: true,
}
